Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -6219,10 +6219,6 @@ ConversationListView {
 .thunar toolbar.horizontal button image {
   -gtk-icon-transform: scale(0.72); }
 
-scrolledwindow.sidebar treeview.view {
-  background: #131519;
-  padding: 1.5px; }
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar > button.toggle.path-bar-button,
 .thunar toolbar .path-bar-button {
@@ -6247,12 +6243,15 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
   box-shadow: none; }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view:hover {
-  background: #1a1c22; }
-window.thunar paned > scrolledwindow treeview.view:selected {
-  color: #9bbfbf;
-  border-radius: 0;
-  box-shadow: none; }
+.thunar scrolledwindow.sidebar treeview.view {
+  background: #131519;
+  padding: 1.5px; }
+  .thunar scrolledwindow.sidebar treeview.view:hover {
+    background: #1e2127; }
+  .thunar scrolledwindow.sidebar treeview.view:selected {
+    color: #9bbfbf;
+    border-radius: 0;
+    box-shadow: none; }
 
 .caja-notebook .entry {
   background: #131519;
